very first implementation of stations - list stations from near location; preparation for upcoming features

--- a/www/settings.html
+++ b/www/settings.html
@@ -110,6 +110,7 @@
                 <span class="mdl-layout-title translate" id="TITLE_EVNOTIFY"></span>
                 <nav class="mdl-navigation">
                     <a class="mdl-navigation__link translate" href="index.html" id="MENU_OVERVIEW"></a>
+                    <a class="mdl-navigation__link translate" href="stations.html" id="MENU_CHARGING_STATIONS"></a>
                     <a class="mdl-navigation__link translate" href="" id="MENU_CHARGE"></a>
                     <a class="mdl-navigation__link translate" href="" id="MENU_NOTIFYME"></a>
                     <a class="mdl-navigation__link translate" href="settings.html" id="MENU_SETTINGS"></a>
