--- a/www/settings.html
+++ b/www/settings.html
@@ -237,7 +237,7 @@
                                 <li class="mdl-menu__item translate" data-val="600" id="INTERVAL_600"></li>
                             </ul>
                         </div>
-                        <span style="visibility: visible" class="mdl-textfield__error marginLeft translate" id="CHARGINGERROR_WARNING"></span><br>
+                        <span style="visibility: visible" class="mdl-textfield__error marginLeft translate" id="CHARGINGERROR_WARNING"></span><br><br><br>
                         <!-- Save Button -->
                         <button onclick="event.preventDefault(); saveSettings()" style="width: 100%; margin-top: 5%"
                             class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect translate" id="SAVE_SETTINGS">
