add possibility to enter consumption value for estimated range calculation

--- a/www/index.html
+++ b/www/index.html
@@ -164,6 +164,9 @@
                     <div id="socCycle" class="socCycle"></div>
                     <!-- Charging information  -->
                     <ul class="charging-info-list mdl-list">
+                        <label class="mdl-button--icon consumption-settings-icon">
+                            <img class="material-icons" src="./icons/settings.svg" onclick="consumption()"></img>
+                        </label>
                         <li class="mdl-list__item">
                             <span class="mdl-list__item-primary-content">
                                 <img class="material-icons mdl-list__item-icon" src="./icons/last_update.svg"></img>
